throw error when selected variables are not permitted or non existing